2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Fix regexps changes from previous commit. When using /e the
	  replacement part has to be a perl snippet.

2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Don't expand '#' in ulink tags. Also allow to escape "#%@" with '\'.
	  Add to testsuite. Fixes #530758

2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mktmpl.in:
	  It is GObject not GtkObject anymore

2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Make note about expanding urls.

	* help/manual/C/gtk-doc-manual.xml:
	  Document the use of |[ ]| as a shortcut for program listing.

	* tests/gobject/src/giface.h:
	* tests/gobject/src/gobject.c:
	  Fix one undocumented symbol and add an exampl of the programlisting
	  shortcut.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	reviewed by: <delete if not using a buddy>
	patch by: <delete if not someone else's patch>

	* gtkdoc-mkdb.in:
	* gtkdoc-mkman.in:
	* gtkdoc-mktmpl.in:

2008-04-22  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  We need to update the webpage.

	* TODO:
	* configure.in:
	  Planning.

	* gtkdoc-mkdb.in:
	  Hopefully now unbreak the docbuild, if one has template but not uses
	  them.

2008-04-17  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Add one more warning. Also trac location of section docs. Merge
	  source symbols once and then on demand (if we read a template).

2008-04-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.in:
	  Idea about the tracing. Not that practical as it is.

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Unify file-error messages. Improve warning detail. Fix undocumented
	  status for template less runs.

2008-04-10  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Ideas.

	* gtkdoc-common.pl.in:
	  Add common method for prining (gcc-style) warnings.

	* gtkdoc-mkdb.in: