@@ -1,3 +1,9 @@
+2008-05-08  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	* gtkdoc-mktmpl.in:
+	  Fix a long standing bug that killed spaces in tmpl files.
+
 2008-05-05  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mkdb.in:
